// Copyright 2023 RobustMQ Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package broker.cluster;

service ClusterService {
  // Get the current status and metadata of the broker cluster
  //
  // Returns cluster information including:
  // - node_count: Number of active nodes in the cluster
  // - cluster_name: Name of the cluster  
  // - uptime: Cluster uptime in seconds
  // - version: Broker version information
  rpc ClusterStatus(ClusterStatusRequest) returns (ClusterStatusReply) {}
}

message ClusterStatusRequest {
  // Optional: Filter by cluster name
  string cluster_name = 1;
}

message ClusterStatusReply {
  // Number of active nodes in the cluster
  uint32 node_count = 1;
  
  // Name of the cluster
  string cluster_name = 2;
  
  // Cluster uptime in seconds
  uint64 uptime = 3;
  
  // Broker version
  string version = 4;
  
  // List of active node IDs
  repeated uint64 active_nodes = 5;
}


